--- a/L2-Lib/bower.json
+++ b/L2-Lib/bower.json
@@ -2,11 +2,11 @@
   "name": "l2-lib",
   "version": "0.0.1",
   "authors": [
-    "pietie <pieter@L2.co.za>"
+    
   ],
   "description": "L2 common library",
-  "main": "",
-  "license": "MIT",
+  "main": "/dist",
+  "license": "PRIVATE",
   "homepage": "",
   "private": true,
   "ignore": [
