--- a/L2-Lib/bower.json
+++ b/L2-Lib/bower.json
@@ -14,6 +14,10 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "*.ts",
+    "*.config",
+    "*.json"
   ]
 }
+ 
