--- a/L2-Lib/package.json
+++ b/L2-Lib/package.json
@@ -2,7 +2,7 @@
   "name": "l2-lib",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/",
+  "main": "dist",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
