--- a/L2-Lib/tsconfig.json
+++ b/L2-Lib/tsconfig.json
@@ -4,7 +4,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "module": "commonjs",
-    "outDir": "dist",
+    "outDir": "../dist",
     "sourceMap": true,
     "target": "es5"
   }
