--- a/L2-Lib/package.json
+++ b/L2-Lib/package.json
@@ -3,7 +3,6 @@
   "bugs": {
     "url": "https://github.com/pietie/l2-lib/issues"
   },
-  "description": "",
   "homepage": "https://github.com/pietie/l2-lib#readme",
   "license": "ISC",
   "main": "dist",
@@ -12,11 +11,18 @@
     "type": "git",
     "url": "git+https://github.com/pietie/l2-lib.git"
   },
-  "scripts": {
-    
-  },
+  "scripts": {},
   "version": "1.0.2",
   "files": [
-	"dist"
-  ]
+    "dist"
+  ],
+  "description": "",
+  "devDependencies": {
+    "@angular/common": "^4.1.0-beta.0",
+    "@angular/compiler": "^4.1.0-beta.0",
+    "@angular/compiler-cli": "^4.1.0-beta.0",
+    "@angular/core": "^4.1.0-beta.0",
+    "rxjs": "^5.0.1",
+    "zone.js": "^0.8.4"
+  }
 }
