--- a/L2-Lib/package.json
+++ b/L2-Lib/package.json
@@ -22,6 +22,7 @@
     "@angular/compiler": "^4.1.0-beta.0",
     "@angular/compiler-cli": "^4.1.0-beta.0",
     "@angular/core": "^4.1.0-beta.0",
+    "@angular/material": "^2.0.0-beta.2",
     "rxjs": "^5.0.1",
     "zone.js": "^0.8.4"
   }
