--- a/L2-Lib/tsconfig.json
+++ b/L2-Lib/tsconfig.json
@@ -11,10 +11,10 @@
     "moduleResolution": "node",
     "outDir": "../dist",
     "sourceMap": true,
-    "target": "es2015",
+    "target": "es5",
     "inlineSources": true,
     "skipLibCheck": true,
-    "lib": [ "es2015", "dom" ]
+    "lib": [ "es2015",  "es5", "dom" ]
 
   }
 }
