--- a/L2-Lib/L2-Lib.csproj
+++ b/L2-Lib/L2-Lib.csproj
@@ -90,6 +90,7 @@
     <TypeScriptCompile Include="controls\index.ts" />
     <TypeScriptCompile Include="controls\L2-controls.module.ts" />
     <TypeScriptCompile Include="controls\l2-grid\l2-grid.ts" />
+    <TypeScriptCompile Include="dal_exports.ts" />
     <TypeScriptCompile Include="index.ts" />
     <TypeScriptCompile Include="jsDAL.common.d.ts" />
     <TypeScriptCompile Include="KeyValueStore.ts" />
